--- a/app/templates/layout.gohtml
+++ b/app/templates/layout.gohtml
@@ -26,5 +26,8 @@
 				<script src="/public/editor/ace.js"></script>
 				<script src="/public/js/editor.js"></script>
 			{{end}}
+			{{if .filesMenu}}
+				<script src="/public/js/files-menu.js"></script>
+			{{end}}
     </body>
 </html>
