--- a/app/templates/user-files.gohtml
+++ b/app/templates/user-files.gohtml
@@ -31,6 +31,7 @@
 								<option>py</option>
 								<option>rb</option>
 								<option>exs</option>
+								<option>php</option>
 							</select>
 						</div>
 						<input type="file" id="fileContentInput" name="fileContent">
